# firos

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  package.json  package.xml
conectors/kiara/: .classpath
conectors/kiara/src/com/firos/kiara/: Main.java
conectors/kiara/src/com/firos/kiara/connector/: Connector.java  Message.java
conectors/kiara/src/com/firos/kiara/interfaces/: Firos.java
config/: config.json  robotdescriptions.json  robots.json  robots_chatter.json  whitelist.json
connectors/kiara/: .project
connectors/kiara/src/com/firos/kiara/connector/: Connector.java  Message.java
data/ros_msgs/: Robot_Event.msg
data/ros_service_info/: FIROS_Info.srv
doc/: Configuration-Files.md  Configuration.md  Installation.md  deprecated.md  index.md  roadmap.md  start.md  usage.md
doc/install/: configuration-files.md  deinstall.md  install.md  introduction.md  turtlesim-example.md  upgrade.md
doc/media/: pubsub-illustration.dot
doc/user/: api.md  interfaces.md  introduction.md
docker/: Dockerfile  docker-compose.yml
docker/docker-config/: robots.json  whitelist.json
firos/: core.py
firos/include/: confManager.py  constants.py  libLoader.py  logger.py
firos/include/contextbroker/: cbPublisher.py  cbSubscriber.py
firos/include/genpy/: generate_numpy.py  generate_struct.py  generator.py
firos/include/rcm/: rcmutils.py  topicManager.py
firos/include/ros/: rosConfigurator.py  topicHandler.py
firos/include/ros/dependencies/: third_party.py
firos/include/server/: firosServer.py  requestHandler.py
msg/: CB_Event.msg  RCM_Event.msg
scripts/: activemqtest.py  config_coap.py  core.py  package.json  rcmemulator.py  test.py
scripts/include/: confManager.py  constants.py  libLoader.py  logger.py  mapServer.py
scripts/include/coap/: coap_dependencies.sh  manager.py
scripts/include/coap/coap-client/: config.js  index.js  package.json
scripts/include/coap/lightweightm2m-iotagent/: config.js  new_config.js
scripts/include/contextbroker/: cbPublisher.py  cbQueryBuilder.py  cbSubscriber.py
scripts/include/pubsub/: pubSubFactory.py
scripts/include/pubsub/activemq/: amqPublisher.py  amqQueryBuilder.py  amqSubscriber.py  connector.py
scripts/include/pubsub/contextbroker/: cbPublisher.py  cbQueryBuilder.py  cbSubscriber.py  ngsi9.py
scripts/include/pubsub/kiara/: kiaraGateway.py  kiaraPublisher.py  kiaraQueryBuilder.py  kiaraSubscriber.py
scripts/include/rcm/: rcmutils.py  topicManager.py
scripts/include/ros/: rosConfigurator.py  rosutils.py  topicHandler.py
scripts/include/ros/dependencies/: __init__.py
scripts/include/server/: requestHandler.py
src/firos/: CMakeLists.txt  package.xml
src/firos/config/: config.json  firosconfig.json  robots.json  robots_copy.json  whitelist.json  whitelists.json
src/firos/msg/: CB_Event.msg
src/firos/scripts/: README.md  core.py  mapserver.js  proxy.py  setup.py  test.py  turtlesimpub.py
src/firos/scripts/include/: confManager.py  constants.py  libLoader.py  logger.py  mapServer.py  server.py
src/firos/scripts/include/contextbroker/: cbHandler.py  cbPublisher.py  cbSubscriber.py
src/firos/scripts/include/genpy/: dynamic.py  generator.py  genmsg_py.py  genpy_firos.py  genpy_main.py  message.py
src/firos/scripts/include/pubsub/: iPubSub.py  pubSubFactory.py
src/firos/scripts/include/pubsub/contextbroker/: __init__.py  cbPublisher.py  cbQueryBuilder.py  cbSubscriber.py  ngsi9.py
src/firos/scripts/include/rcm/: topicManager.py
src/firos/scripts/include/ros/: __init__.py  configurationManager.py  dependencies.py  rosConfigurator.py  rosutils.py  serviceHandler.py  topicHandler.py
src/firos/scripts/include/ros/dependencies/: generated.py  third_party.py
src/firos/scripts/include/server/: firosServer.py  requestHandler.py
src/firos/srv/: FIROS_Info.srv
