<?xml version="1.0"?>
<package format="2">
  <name>firos</name>
  <version>0.2.0</version>
  <description>
    FIROS is a tool that helps connecting robots to the cloud. For this purpose it uses the Robot Operating System (ROS, http://www.ros.org/) and the Orion-Context-Broker (http://catalogue.fiware.org/enablers/publishsubscribe-context-broker-orion-context-broker) as a way to publish and listen robot's data. FIROS works as a translator between the robotics field and the cloud world, transforming ROS-Messages into FIWARE-Entities to publish them in the cloud, and vice versa.
  </description>
  <author>Dominik Lux</author>
  <author>Peter Detzner</author>
  <maintainer email="dominik.lux@iml.fraunhofer.de">Dominik Lux</maintainer>
  <maintainer email="peter.detzner@iml.fraunhofer.de">Peter Detzner</maintainer>

  <license>MIT</license>
  <url>https://github.com/iml130/firos</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>requests</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <doc_depend>mkdocs</doc_depend>
</package>